--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1474,3 +1474,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-60
+  taskId: 55692786
+  timeCreate: Fri Sep 22 03:30:09 2023
+  timeStart: Fri Sep 22 03:54:53 2023
+  timeFinish: Fri Sep 22 04:03:01 2023
+  timeWait: 24 mins
+  timeBuild: 8 mins
+  timeTotal: 32 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-61
+  taskId: 55693302
+  timeCreate: Fri Sep 22 04:15:26 2023
+  timeStart: Fri Sep 22 04:36:43 2023
+  timeFinish: Fri Sep 22 04:41:19 2023
+  timeWait: 21 mins
+  timeBuild: 4 mins
+  timeTotal: 25 mins
