ci: update 3.10; update plugin-registry-generator[3.8] = 7.72.0; update previous CSV to 3.8.0 for 3.9+; disable 3.9 jobs; disable 3.9 mgmt jobs
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -392,7 +392,7 @@
           "7.74.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "upstream_branch": [
@@ -422,7 +422,7 @@
           "7.74.x",
           "main"
         ],
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "upstream_branch": [
@@ -444,7 +444,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "disabled": true
@@ -458,7 +458,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "disabled": true
@@ -472,7 +472,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "disabled": true
@@ -486,7 +486,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "disabled": true
@@ -500,7 +500,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "disabled": true
@@ -514,7 +514,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": false
+        "disabled": true
       },
       "3.10": {
         "disabled": true
@@ -532,15 +532,15 @@
       },
       "3.9": {
         "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": ""
+        "CSV_VERSION_PREV": "3.8.0"
       },
       "3.10": {
         "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": ""
+        "CSV_VERSION_PREV": "3.8.0"
       },
       "3.x": {
         "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": ""
+        "CSV_VERSION_PREV": "3.8.0"
       }
     }
   },
