--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1591,3 +1591,30 @@
   timeWait: 2 mins
   timeBuild: 4 mins
   timeTotal: 6 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.10-11
+  taskId: 55712217
+  timeCreate: Fri Sep 22 20:54:00 2023
+  timeStart: Fri Sep 22 20:54:12 2023
+  timeFinish: Fri Sep 22 21:23:22 2023
+  timeWait: 0 mins
+  timeBuild: 29 mins
+  timeTotal: 29 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-43
+  taskId: 55712755
+  timeCreate: Fri Sep 22 21:13:25 2023
+  timeStart: Fri Sep 22 21:14:11 2023
+  timeFinish: Fri Sep 22 21:22:23 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-67
+  taskId: 55713066
+  timeCreate: Fri Sep 22 21:42:53 2023
+  timeStart: Fri Sep 22 21:43:35 2023
+  timeFinish: Fri Sep 22 21:46:39 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
