chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1636,3 +1636,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-66
+  taskId: 55715683
+  timeCreate: Sat Sep 23 04:08:22 2023
+  timeStart: Sat Sep 23 04:08:30 2023
+  timeFinish: Sat Sep 23 04:15:10 2023
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 6 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-69
+  taskId: 55715944
+  timeCreate: Sat Sep 23 04:24:20 2023
+  timeStart: Sat Sep 23 04:24:33 2023
+  timeFinish: Sat Sep 23 04:27:38 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
