--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1780,3 +1780,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-67
+  taskId: 55724354
+  timeCreate: Sun Sep 24 18:43:27 2023
+  timeStart: Sun Sep 24 18:43:54 2023
+  timeFinish: Sun Sep 24 18:50:34 2023
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-74
+  taskId: 55724406
+  timeCreate: Sun Sep 24 18:58:06 2023
+  timeStart: Sun Sep 24 18:58:28 2023
+  timeFinish: Sun Sep 24 19:01:56 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
