ci: update 3.10; update plugin-registry-generator[3.8] = 7.72.0; update previous CSV to 3.8.0 for 3.9+; enable 3.9 mgmt jobs
Change-Id: Iae12ed5c4300d8555de3b5ba3bb7de99ce841b04
Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -392,7 +392,7 @@
           "7.74.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "upstream_branch": [
@@ -422,7 +422,7 @@
           "7.74.x",
           "main"
         ],
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "upstream_branch": [
@@ -444,7 +444,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "disabled": true
@@ -458,7 +458,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "disabled": true
@@ -472,7 +472,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "disabled": true
@@ -486,7 +486,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "disabled": true
@@ -500,7 +500,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "disabled": true
@@ -514,7 +514,7 @@
         "disabled": true
       },
       "3.9": {
-        "disabled": true
+        "disabled": false
       },
       "3.10": {
         "disabled": true
