--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1888,3 +1888,21 @@
   timeWait: 4 mins
   timeBuild: 4 mins
   timeTotal: 9 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-70
+  taskId: 55738095
+  timeCreate: Mon Sep 25 11:24:51 2023
+  timeStart: Mon Sep 25 11:24:54 2023
+  timeFinish: Mon Sep 25 11:32:18 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-80
+  taskId: 55738570
+  timeCreate: Mon Sep 25 11:41:33 2023
+  timeStart: Mon Sep 25 11:41:33 2023
+  timeFinish: Mon Sep 25 11:44:49 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
