chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2014,3 +2014,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-86
+  taskId: 55788662
+  timeCreate: Wed Sep 27 07:23:12 2023
+  timeStart: Wed Sep 27 07:26:18 2023
+  timeFinish: Wed Sep 27 07:30:06 2023
+  timeWait: 3 mins
+  timeBuild: 3 mins
+  timeTotal: 6 mins
