--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -484,3 +484,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-server-rhel8
+  tag: 3.9-12
+  taskId: 55800197
+  timeCreate: Wed Sep 27 11:47:58 2023
+  timeStart: Wed Sep 27 11:48:11 2023
+  timeFinish: Wed Sep 27 11:56:12 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-294
+  taskId: 55801297
+  timeCreate: Wed Sep 27 12:32:41 2023
+  timeStart: Wed Sep 27 12:32:54 2023
+  timeFinish: Wed Sep 27 12:36:44 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
