--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2095,3 +2095,21 @@
   timeWait: 3 mins
   timeBuild: 4 mins
   timeTotal: 7 mins
+- name: devspaces-server-rhel8
+  tag: 3.10-14
+  taskId: 55822001
+  timeCreate: Thu Sep 28 04:23:04 2023
+  timeStart: Thu Sep 28 04:23:21 2023
+  timeFinish: Thu Sep 28 04:31:31 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-91
+  taskId: 55822581
+  timeCreate: Thu Sep 28 04:41:13 2023
+  timeStart: Thu Sep 28 04:41:55 2023
+  timeFinish: Thu Sep 28 04:45:12 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
