chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -2113,3 +2113,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-74
+  taskId: 55825239
+  timeCreate: Thu Sep 28 06:16:39 2023
+  timeStart: Thu Sep 28 06:17:00 2023
+  timeFinish: Thu Sep 28 06:24:09 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-92
+  taskId: 55825588
+  timeCreate: Thu Sep 28 06:32:58 2023
+  timeStart: Thu Sep 28 06:33:12 2023
+  timeFinish: Thu Sep 28 06:36:59 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
